Added bootswatch theme and added back to list button

--- a/Slice.Web/Pages/Categories/Create.cshtml
+++ b/Slice.Web/Pages/Categories/Create.cshtml
@@ -21,6 +21,7 @@
             <span asp-validation-for="Category.DisplayOrder" class="text-danger"></span>
         </div>
         <button class="btn btn-success" type="submit">Create</button>
+        <a class="btn btn-dark" asp-page="Index">Back to List</a>
     </div>
 </form>
 
