--- a/Slice.Web/Pages/Categories/Delete.cshtml
+++ b/Slice.Web/Pages/Categories/Delete.cshtml
@@ -20,6 +20,7 @@
             <input asp-for="Category.DisplayOrder" class="form-control" disabled />
         </div>
         <button class="btn btn-danger" type="submit">Delete</button>
+        <a class="btn btn-dark" asp-page="Index">Back to List</a>
     </div>
 </form>
 
