--- a/Slice.Web/Pages/Categories/Edit.cshtml
+++ b/Slice.Web/Pages/Categories/Edit.cshtml
@@ -22,6 +22,7 @@
             <span asp-validation-for="Category.DisplayOrder" class="text-danger"></span>
         </div>
         <button class="btn btn-primary" type="submit">Update</button>
+        <a class="btn btn-dark" asp-page="Index">Back to List</a>
     </div>
 </form>
 
