Updated namespace for pages

--- a/Slice.Web/Pages/Categories/Create.cshtml
+++ b/Slice.Web/Pages/Categories/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Slice.Web.Pages.Categories.CreateModel
+@model Categories.CreateModel
 @{
     ViewData["Title"] = "Create Category";
 }
