--- a/Slice.Web/Pages/Categories/Delete.cshtml
+++ b/Slice.Web/Pages/Categories/Delete.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Slice.Web.Pages.Categories.DeleteModel
+@model Categories.DeleteModel
 @{
     ViewData["Title"] = "Delete Category";
 }
