--- a/Slice.Web/Pages/_ViewImports.cshtml
+++ b/Slice.Web/Pages/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@using Slice.Web
-@using Slice.Web.Pages
+@using Slice.Web.Pages.Admin
 @namespace Slice.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
