--- a/Slice.Web/Pages/Shared/_Layout.cshtml
+++ b/Slice.Web/Pages/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                                     Food Types
                                 </a>
                                 <div class="dropdown-divider"></div>
+                                <a class="dropdown-item nav-item" asp-area="" asp-page="/Admin/Products/Index">
+                                    Products
+                                </a>
                             </div>
                         </li>
                     </ul>
