Added cloudinary upload and configured

--- a/Slice.Web/Pages/Admin/Products/Index.cshtml
+++ b/Slice.Web/Pages/Admin/Products/Index.cshtml
@@ -7,7 +7,7 @@
 <div class="container">
     <div class="row pt-4">
         <div class="col-6">
-            <h2 class="text-primary">Menu Item List</h2>
+            <h2 class="text-primary">Product List</h2>
         </div>
         <div class="col-6 text-end">
             <a class="btn btn-primary" asp-page="Upsert">
