--- a/Slice.Web/Pages/Admin/Products/Upsert.cshtml
+++ b/Slice.Web/Pages/Admin/Products/Upsert.cshtml
@@ -29,7 +29,7 @@
         </div>
         <div class="mb-3">
             <label asp-for="Product.PublicId"></label>
-            <input type="file" name="files" id="uploadBox" class="form-control" />
+            <input type="file" name="file" id="uploadBox" class="form-control" />
         </div>
         <div class="mb-3">
             <label asp-for="Product.CategoryId"></label>
