Added ajax calls for getting the data to the view

--- a/Slice.Web/Pages/Admin/Products/Upsert.cshtml
+++ b/Slice.Web/Pages/Admin/Products/Upsert.cshtml
@@ -19,7 +19,7 @@
         </div>
         <div class="mb-3">
             <label asp-for="Product.Description"></label>
-            <input asp-for="Product.Description" class="form-control" />
+            <textarea asp-for="Product.Description" class="form-control"></textarea>
             <span asp-validation-for="Product.Description" class="text-danger"></span>
         </div>
         <div class="mb-3">
@@ -56,4 +56,11 @@
     @{
     <partial name="_ValidationScriptsPartial" />
     }
+<script>
+    tinymce.init({
+      selector: 'textarea',
+      plugins: 'advlist autolink lists link image charmap print preview hr anchor pagebreak',
+      toolbar_mode: 'floating',
+    });
+</script>
 }
