--- a/Slice.Web/Pages/Admin/Products/Index.cshtml
+++ b/Slice.Web/Pages/Admin/Products/Index.cshtml
@@ -18,7 +18,7 @@
 
     <br /><br />
 
-    <table class="table table-bordered table-striped" width="100%">
+    <table id="loadData" class="table table-bordered table-striped" width="100%">
         <thead>
             <tr>
                 <th>Name</th>
@@ -30,3 +30,8 @@
         </thead>
     </table>
 </div>
+
+
+@section Scripts{
+    <script src="~/js/products.js"></script>
+}
