Added validation for uploading and image

--- a/Slice.Web/Pages/Admin/Products/Upsert.cshtml
+++ b/Slice.Web/Pages/Admin/Products/Upsert.cshtml
@@ -81,5 +81,18 @@
       plugins: 'advlist autolink lists link image charmap print preview hr anchor pagebreak',
       toolbar_mode: 'floating',
     });
+
+    function ValidateInput() {
+        if(document.getElementById("uploadBox").value == "") {
+            Swal.fire({
+              icon: 'error',
+              title: 'Oops...',
+              text: 'Please upload an Image!',
+            });
+            return false;
+        }
+        return true;
+    }
+
 </script>
 }
