--- a/Slice.Web/Pages/Customer/Home/Index.cshtml
+++ b/Slice.Web/Pages/Customer/Home/Index.cshtml
@@ -31,7 +31,7 @@
                                     <p> @Html.Raw(product.Description)</p>
                                 </div>
                                 <div class="col-12 p-1">
-                                    <a class="btn btn-dark form-control btn-sm p-2" style="height:40px">View Details</a>
+                                    <a asp-page="Details" asp-route-id="@product.Id" class="btn btn-dark form-control btn-sm p-2" style="height:40px">View Details</a>
                                 </div>
                             </div>
                         </div>
