Added on post funcationlity in details view

--- a/Slice.Web/Pages/Customer/Home/Details.cshtml
+++ b/Slice.Web/Pages/Customer/Home/Details.cshtml
@@ -6,6 +6,8 @@
 
 <div class="">
     <form method="post">
+        <input asp-for="Cart.ProductId" hidden/>
+        <input asp-for="Cart.AppUserId" hidden/>
         <div class="container backgroundWhite">
             <div class="card">
                 <div class="card-header">
