--- a/Slice.Web/Pages/Shared/_Layout.cshtml
+++ b/Slice.Web/Pages/Shared/_Layout.cshtml
@@ -40,6 +40,11 @@
                                 </a>
                             </div>
                         </li>
+                        <li>
+                            <a class="nav-link text-white" asp-area="" asp-page="/Customer/ShoppingCart/Index">
+                                <i class="bi bi-cart"></i>
+                            </a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
