Added summary post and get view but there is a bug in PostgreSQL

--- a/Slice.Web/Pages/Customer/ShoppingCart/Summary.cshtml
+++ b/Slice.Web/Pages/Customer/ShoppingCart/Summary.cshtml
@@ -15,7 +15,7 @@
                             <h3 class="text-white-50">Order Summary</h3>
                         </div>
                         <div class="col-6 text-end">
-                            <a class="btn btn-outline-info btn-sm">Back to Cart</a>
+                            <a asp-page="Index" class="btn btn-outline-info btn-sm">Back to Cart</a>
                         </div>
                     </div>
                 </div>
@@ -30,10 +30,11 @@
                                 </div>
                                 <div class="row my-1">
                                     <div class="col-3">
-                                        <label>Name</label>
+                                        <label>Full Name</label>
                                     </div>
                                     <div class="col-9">
-                                        <input class="form-control" />
+                                        <input asp-for="OrderHeader.PickUpName" class="form-control" />
+                                        <span asp-validation-for="OrderHeader.PickUpName" class="text-danger"></span>
                                     </div>
                                 </div>
                                 <div class="row my-1">
@@ -41,7 +42,8 @@
                                         <label>Phone Number</label>
                                     </div>
                                     <div class="col-9">
-                                        <input class="form-control" />
+                                        <input asp-for="OrderHeader.PhoneNumber" class="form-control" />
+                                        <span asp-validation-for="OrderHeader.PhoneNumber" class="text-danger"></span>
                                     </div>
                                 </div>
                                 <div class="row my-1">
@@ -49,7 +51,8 @@
                                         <label>Pickup Date</label>
                                     </div>
                                     <div class="col-9">
-                                        <input type="date" class="form-control" />
+                                        <input value="" asp-for="OrderHeader.PickUpDate" type="date" class="form-control" />
+                                        <span asp-validation-for="OrderHeader.PickUpDate" class="text-danger"></span>
                                     </div>
                                 </div>
                                 <div class="row my-1">
@@ -57,7 +60,8 @@
                                         <label>Pickup Time</label>
                                     </div>
                                     <div class="col-9">
-                                        <input type="time" class="form-control" />
+                                        <input value="" asp-for="OrderHeader.PickUpTime" type="time" class="form-control" />
+                                        <span asp-validation-for="OrderHeader.PickUpTime" class="text-danger"></span>
                                     </div>
                                 </div>
                                 <div class="row my-1">
@@ -65,7 +69,8 @@
                                         <label>Additional Instructions: </label>
                                     </div>
                                     <div class="col-9">
-                                        <textarea style="height:100px;" class="form-control"></textarea>
+                                        <textarea asp-for="OrderHeader.Comments" style="height:100px;" class="form-control"></textarea>
+                                        <span asp-validation-for="OrderHeader.Comments" class="text-danger"></span>
                                     </div>
                                 </div>
                             </div>
@@ -75,16 +80,19 @@
                                     <span class="text-info">Order Summary:</span>
                                 </h4>
                                 <ul class="list-group mb-3">
-                                    <li class="list-group-item d-flex justify-content-between">
-                                        <div>
-                                            <h6 class="my-0">Name</h6>
-                                            <small class="text-muted">Quantity: Count</small>
-                                        </div>
-                                        <span class="text-muted">$Price * Count</span>
-                                    </li>
+                                    @foreach (var item in Model.CartList)
+                                    {
+                                        <li class="list-group-item d-flex justify-content-between">
+                                            <div>
+                                                <h6 class="my-0">@item.Product.Name</h6>
+                                                <small class="text-muted">Quantity: @item.Count</small>
+                                            </div>
+                                            <span class="text-muted">@(((item.Product.Price * item.Count)).ToString("c"))</span>
+                                        </li>
+                                    }
                                     <li class="list-group-item d-flex justify-content-between bg-light">
                                         <small class="text-info">Total (USD)</small>
-                                        <strong class="text-info">$</strong>
+                                        <strong class="text-info">@Model.OrderHeader.OrderTotal.ToString("c")</strong>
                                     </li>
                                 </ul>
                             </div>
@@ -102,3 +110,9 @@
         </div>
     </div>
 </form>
+
+@section Scripts{
+    @{
+    <partial name="_ValidationScriptsPartial" />
+    }
+}
