--- a/Slice.Web/Pages/_ViewImports.cshtml
+++ b/Slice.Web/Pages/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Slice.Web
 @using Slice.Web.Pages.Admin
+@using Microsoft.Extensions.Options
 @namespace Slice.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
