--- a/Slice.Web/Pages/_ViewImports.cshtml
+++ b/Slice.Web/Pages/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Slice.Web
 @using Slice.Web.Pages.Admin
 @using Microsoft.Extensions.Options
+@using Slice.Utilities
 @namespace Slice.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
